--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,113 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Index</title>
-  </head>
-  <body>
-    <h1>Welcome to the Aireline Review Sentiment Analyzer! </h1>
-	<p>Click here to input your own review!</p>
 
-	<form action="http://127.0.0.1:5000/review">
-		<input type="submit" value="Review" />
-	</form>
-  </body>
+<head>
+  <title>Airline Review Sentiment Analyzer</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->
+  <link rel="icon" type="image/png" href="static/images/icons/cat.png"/>
+<!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="static/vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="static/vendor/animate/animate.css">
+<!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="static/vendor/select2/select2.min.css">
+<!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="static/vendor/perfect-scrollbar/perfect-scrollbar.css">
+<!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="static/css/util.css">
+  <link rel="stylesheet" type="text/css" href="static/css/main.css">
+<!--===============================================================================================-->
+</head>
+
+<body>
+
+  <style>
+    body{
+      background-image: url("images/airplane.gif"), url("images/airplane.gif");
+      background-size: auto;
+      background-position: 95% 10%, 5% 10%;
+      /* background-position: right center, left center; */
+      background-size: 20%;
+      background-attachment: inherit;
+      background-repeat: no-repeat, no-repeat;
+      background-color: #E6E2E1;
+    }
+  </style>
+
+  <div id="example1" class="limiter">
+    <div class="container-table100">
+      <div class="wrap-table100">
+        <div class="table100">
+          <div style="max-width:25%; margin-left: auto; margin-right: auto;">
+            <center>
+              <img src="https://commons.wikimedia.org/wiki/Airport#/media/File:Lax_sign.jpg" alt="Twitch Logo">
+            </center>
+          </div>
+
+  <form action="/">
+    <div style="text-align: center;">
+      <br>
+        <h1 class="headertext">Chat Classifier</h1>
+        <br>
+        Input a word or phrase to get its toxicity levels:
+        <br>
+        <br>
+        <center>
+          <input align = "center" type="text" name="chat_in" autofocus="autofocus" value="{{x_input}}" maxlength="500" id="rcorners2">
+        </center>
+    <br>
+    <!-- Submit button -->
+    <center>
+    <input align="center" type="submit" value="Submit" method="get" id="rcorners1">
+  </center>
+    <br>
+
+  </form>
+    </div>
+    <!-- {% for p in prediction %}
+      <br>  {{p['name']}}:{{ (100*p['prob']) | round }}%
+    {% endfor %} -->
+  </p>
+          <table>
+            <thead>
+              <tr class="table100-head">
+                <th class="column1">String Input</th>
+                <th colspan="2" class="column1">Review Sentiment (Predictions)</th>
+              </tr>
+            </thead>
+            <tbody>
+                <tr>
+                  <td rowspan="6" class="column1">{{ chat_in }}</td>
+                  <!-- <td rowspan="6" class="column1">{{ chat_in }}</td> -->
+                  <td class="column1">{{prediction[0]['name']}}</td>
+                  <td class="column2">{{ (100 * prediction[0]['prob']) | round}}%</td>
+                </tr>
+            </tbody>
+          </table>
+          <br>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+<!--===============================================================================================-->
+  <script src="static/vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+  <script src="static/vendor/bootstrap/js/popper.js"></script>
+  <script src="static/vendor/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+  <script src="static/vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+  <script src="static/js/main.js"></script>
+
+</body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
